# SimpleProgrammingLanguage

./: CMakeLists.txt  README.md  compile_commands.json
include/: ast.h  expression_parser.h  lexer.h  lexer_test.h  parser.h  parser_test.h  test_case.h  token.h
src/: ast.cpp  expression_parser.cpp  lexer.cpp  lexer_test.cpp  main.cpp  parser.cpp  parser_test.cpp  test_case.cpp  token.cpp
